crates/oxc_react_compiler/tests/snapshots/capturing-function-alias-computed-load-4.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-function-alias-computed-load-4.js
---
import { c as _c } from "react/compiler-runtime";
function bar(a) {
	const $ = _c(2);
	let y;
	if ($[0] !== a) {
		const x = [a];
		y = {};
		const f0 = function() {
			y = x[0].a[1];
		};
		f0();
		$[0] = a;
		$[1] = y;
	} else {
		y = $[1];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: bar,
	params: [{ a: ["val1", "val2"] }],
	isComponent: false
};
