crates/oxc_react_compiler/tests/snapshots/capturing-function-alias-computed-load.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-function-alias-computed-load.js
---
import { c as _c } from "react/compiler-runtime";
function bar(a) {
	const $ = _c(2);
	let y;
	if ($[0] !== a) {
		const x = [a];
		y = {};
		const f0 = function() {
			y = x[0];
		};
		f0();
		$[0] = a;
		$[1] = y;
	} else {
		y = $[1];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: bar,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
