crates/oxc_react_compiler/tests/snapshots/capturing-function-decl.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-function-decl.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(2);
	let t;
	if ($[0] !== a) {
		t = { a };
		const x = function x() {
			t.foo();
		};
		x(t);
		$[0] = a;
		$[1] = t;
	} else {
		t = $[1];
	}
	return t;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
